Update design to green gradients and add new SendSafe features (bulk, interstate, same day, vendor fulfillment, import/export)

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 :root {
-  --neon-pink: #ff00ff;
   --neon-green: #00ff9d;
-  --dark-purple: #9d00ff;
+  --bright-green: #22c55e;
+  --dark-green: #16a34a;
   --black: #000000;
 }
 
